--- a/var/www/blackroad/llm-chat.html
+++ b/var/www/blackroad/llm-chat.html
@@ -323,6 +323,7 @@
 
       let convo = [];
       let controller = null; // AbortController for streaming
+      let streamBuffer = ''; // buffer for partial streaming data
 
       function addMsg(role, text) {
         const div = document.createElement('div');
@@ -397,8 +398,9 @@
 
       function parseAndAppend(pre, chunk) {
         // Accept raw text, SSE "data: ...", or NDJSON lines
-        const text = chunk;
-        const lines = text.split(/\r?\n/);
+        streamBuffer += chunk;
+        const lines = streamBuffer.split(/\r?\n/);
+        streamBuffer = lines.pop();
         for (const line of lines) {
           if (!line) continue;
           if (line.startsWith('data:')) {
@@ -440,6 +442,7 @@
 
         // Stream
         controller = new AbortController();
+        streamBuffer = '';
         streamDot.classList.add('ok');
         try {
           const r = await fetch('/api/llm/chat', {
@@ -460,6 +463,7 @@
             if (value)
               parseAndAppend(botPre, decoder.decode(value, { stream: true }));
           }
+          if (streamBuffer) parseAndAppend(botPre, '\n');
         } catch (e) {
           botPre.textContent += `\n[stream error] ${String(e)}`;
         } finally {
