docs: clean quantum readme and placeholder

--- a/apps/quantum/ternary_consciousness_v3.html
+++ b/apps/quantum/ternary_consciousness_v3.html
@@ -1,1 +1,12 @@
-<!doctype html><html lang="en"><head><meta charset="utf-8"/><title>Ternary Quantum Consciousness Framework</title><meta name="viewport" content="width=device-width,initial-scale=1"/></head><body><h1>🧠 Ternary Quantum Consciousness Framework</h1><p>Installer placeholder.</p></body></html>
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Ternary Quantum Consciousness Framework</title>
+  </head>
+  <body>
+    <h1>🧠 Ternary Quantum Consciousness Framework</h1>
+    <p>Interactive qutrit lab coming soon.</p>
+  </body>
+</html>
